Release history for Acme-CPANAuthors-MBTI

{{$NEXT}}

0.001000 2014-12-26T11:48:13Z 70a79bf
 - First version.
