@@ -1,4 +1,6 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001001
+ [Changed / configure requires]
+ - perl 5.008 → 5.014
 
